--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Backend Node.js dependencies
 backend/node_modules/
 backend/package-lock.json
+backend/yarn.lock
 
 # Logs
 backend/npm-debug.log*
