--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,9 @@ jobs:
           node-version: 18
           cache: 'npm'
 
+      - name: Generate package-lock.json
+        run: npm install --package-lock-only
+
       - name: Install dependencies
         run: npm install
 
