--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,9 +27,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-
-      - name: Generate package-lock.json
-        run: npm install --package-lock-only
+          cache-dependency-path: backend/package-lock.json
 
       - name: Install dependencies
         run: npm install
